<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_terminal">Terminal</string>
    <string name="input_password">Input your password</string>
    <string name="password_worng">Password not correct.</string>
    <string name="connected">[Connected to %s] </string>
    <string name="open_link">Open url %s</string>
    <string name="see_dump">Application has been crashed, see %s for crash dump.</string>
    <string name="title_open_password">Enable password</string>
    <string name="summary_open_password">When open terminal,you must verify password or you cannot use it.</string>
    <string name="custom_preferences">Individualization Settings</string>
    <string name="external_shell_bin_path">External Shell</string>
    <string name="external_profile_path">External Profile</string>
    <string name="sum_profile">Store the initial command file</string>
    <string name="sum_extshell">Personalized command interpreter</string>
    <string name="sum_login">Use the specified command interpreter login terminal</string>
    <string name="external_use_login">Use External Shell</string>
    <string name="sum_def_profile">Use the specified initial command file login terminal</string>
    <string name="external_use_profile">Use External Profile</string>
    <string name="title_start_on_boot">Automatic startup</string>
    <string name="summary_start_on_boot">Boot automatically open a terminal</string>
    <string name="title_auto_su">Automatic access to root permission</string>
    <string name="summary_auto_su">Every time you start to open shell root users</string>
    <string name="preferences">Preferences</string>
    <string name="input_window_title">Input window title</string>
    <string name="menu_set_title">Set window title</string>
    <string name="menu_ssh">SSH clent</string>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="window_list">Windows</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="reset">Reset term</string>
    <string name="send_email">Email to</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Toggle soft keyboard</string>
    <string name="reset_toast_notification">This window\'s terminal state has been reset.</string>
    <string name="enable_wakelock">Take WakeLock</string>
    <string name="disable_wakelock">Drop WakeLock</string>
    <string name="enable_wifilock">Take WifiLock</string>
    <string name="disable_wifilock">Drop WifiLock</string>
    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="paste">Paste</string>
    <string name="send_control_key">Send control key</string>
    <string name="send_fn_key">Send fn key</string>
    <string name="select_copy">Select text to copy</string>
    <string name="window_title">Window %1$d</string>
    <string name="service_notify_text">Terminal session is running</string>
    <string name="process_exit_message">Terminal session finished</string>
    <string name="process_exit_message_status">Status</string>
    <string name="screen_summary">Change the screen display parameters</string>
    <string name="text_summary">Change the text display parameters</string>
    <string name="shell_summary">Change the command line configuration</string>
    <string name="kb_summary">Changes keyboard configuration</string>
    <string name="custom_summary">Customize your terminal</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_actionbar_preference">Action bar</string>
    <string name="summary_actionbar_preference">Choose the action bar\'s behavior (Android 3.0 and up).</string>
    <string name="dialog_title_actionbar_preference">Action bar behavior</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose the screen orientation behavior.</string>
    <string name="dialog_title_orientation_preference">Screen orientation behavior</string>
    <string name="title_cursorstyle_preference">Cursor style</string>
    <string name="summary_cursorstyle_preference">Choose cursor style.</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style</string>
    <string name="title_cursorblink_preference">Cursor blink</string>
    <string name="summary_cursorblink_preference">Choose cursor blink.</string>
    <string name="dialog_title_cursorblink_preference">Cursor blink</string>
    <string name="title_cursorblink_period_preference">Cursor blink period</string>
    <string name="summary_cursorblink_period_preference">Choose cursor blink period.</string>
    <string name="dialog_title_cursorblink_period_preference">Cursor blink period</string>
    <string name="text_preferences">Text</string>
    <string name="title_utf8_by_default_preference">Default to UTF-8</string>
    <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_backaction_preference">Back button behavior</string>
    <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
    <string name="dialog_title_backaction_preference">Back button behavior</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
    <string name="title_initialcommand_preference">Initial command</string>
    <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
    <string name="dialog_title_initialcommand_preference">Initial Command</string>
    <string name="title_termtype_preference">Terminal type</string>
    <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
    <string name="dialog_title_termtype_preference">Terminal type</string>
    <string name="title_close_window_on_process_exit_preference">Close window on exit</string>
    <string name="summary_close_window_on_process_exit_preference">Whether a window should close when its shell exits.</string>
    <string name="title_verify_path_preference">Verify PATH entries</string>
    <string name="summary_verify_path_preference">Whether inaccessible directories should be removed from the PATH.</string>
    <string name="title_do_path_extensions_preference">Allow PATH extensions</string>
    <string name="summary_do_path_extensions_preference">Whether other apps should be allowed to provide additional commands (add to PATH).</string>
    <string name="title_allow_prepend_path_preference">Allow PATH prepend</string>
    <string name="summary_allow_prepend_path_preference">Whether other apps should be allowed to override existing commands (add to the beginning of PATH).</string>
    <string name="title_home_path_preference">HOME folder</string>
    <string name="summary_home_path_preference">Path to a writable folder to be used as HOME.</string>
    <string name="control_key_dialog_title">Control and Function Keys</string>
    <string name="control_key_dialog_control_text">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
    <string name="control_key_dialog_control_disabled_text">No control key set.</string>
    <string name="control_key_dialog_fn_text">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
    <string name="control_key_dialog_fn_disabled_text">No function key set.</string>
    <string name="confirm_window_close_message">Close this window?</string>
    <string name="perm_run_script">Run arbitrary commands in Terminal Emulator</string>
    <string name="permdesc_run_script">Allows application to open new windows in Android Terminal Emulator and run commands in those windows with all of Android Terminal Emulator\'s permissions, including access to the Internet and your SD Card.</string>
    <string name="perm_append_to_path">Add commands to Terminal Emulator</string>
    <string name="permdesc_append_to_path">Allows application to provide additional commands (add directories to the PATH) for Android Terminal Emulator.</string>
    <string name="perm_prepend_to_path">Override commands in Terminal Emulator</string>
    <string name="permdesc_prepend_to_path">Allows application to override existing commands with its own versions (prepend directories to the PATH) in Android Terminal Emulator.</string>
    <string name="email_transcript_subject">Transcript from Android Terminal Emulator</string>
    <string name="email_transcript_chooser_title">Mail transcript using:</string>
    <string name="email_transcript_no_email_activity_found">Could not choose an email activity to send transcript.</string>
    <string name="alt_sends_esc">Alt key sends ESC</string>
    <string name="alt_sends_esc_summary_on">Alt key sends ESC.</string>
    <string name="alt_sends_esc_summary_off">Alt key does not send ESC.</string>
    <string name="title_mouse_tracking_preference">Send mouse events</string>
    <string name="summary_mouse_tracking_preference">Whether tap and scroll events should be sent as escape sequences to the terminal.</string>
    <string name="title_terminal_beep_preference">Beep</string>
    <string name="summary_terminal_beep_preference">Whether \\a should be beep</string>
    <string name="title_use_keyboard_shortcuts">Use keyboard shortcuts</string>
    <string name="use_keyboard_shortcuts_summary_on">Ctrl-Tab: Choose window\nCtrl-Shift-N: New window\nCtrl-Shift-V: Paste</string>
    <string name="use_keyboard_shortcuts_summary_off">Keyboard shortcuts are not open</string>
    <string name="activity_term_here_title">Term Here</string>

</resources>