<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/keyboard_preferences" >
        <ListPreference
            android:defaultValue="@string/pref_backaction_default"
            android:dialogTitle="@string/dialog_title_backaction_preference"
            android:entries="@array/entries_backaction_preference"
            android:entryValues="@array/entryvalues_backaction_preference"
            android:key="backaction"
            android:summary="@string/summary_backaction_preference"
            android:title="@string/title_backaction_preference"/>
        <ListPreference
            android:defaultValue="@string/pref_controlkey_default"
            android:dialogTitle="@string/dialog_title_controlkey_preference"
            android:entries="@array/entries_controlkey_preference"
            android:entryValues="@array/entryvalues_controlkey_preference"
            android:key="controlkey"
            android:summary="@string/summary_controlkey_preference"
            android:title="@string/title_controlkey_preference"/>
        <ListPreference
            android:defaultValue="@string/pref_fnkey_default"
            android:dialogTitle="@string/dialog_title_fnkey_preference"
            android:entries="@array/entries_fnkey_preference"
            android:entryValues="@array/entryvalues_fnkey_preference"
            android:key="fnkey"
            android:summary="@string/summary_fnkey_preference"
            android:title="@string/title_fnkey_preference"/>
        <ListPreference
            android:defaultValue="@string/pref_ime_default"
            android:dialogTitle="@string/dialog_title_ime_preference"
            android:entries="@array/entries_ime_preference"
            android:entryValues="@array/entryvalues_ime_preference"
            android:key="ime"
            android:summary="@string/summary_ime_preference"
            android:title="@string/title_ime_preference"/>
        <CheckBoxPreference
            android:defaultValue="@bool/pref_alt_sends_esc_default"
            android:key="alt_sends_esc"
            android:summaryOff="@string/alt_sends_esc_summary_off"
            android:summaryOn="@string/alt_sends_esc_summary_on"
            android:title="@string/alt_sends_esc"/>
        <CheckBoxPreference
            android:defaultValue="@bool/pref_use_keyboard_shortcuts_default"
            android:key="use_keyboard_shortcuts"
            android:summaryOff="@string/use_keyboard_shortcuts_summary_off"
            android:summaryOn="@string/use_keyboard_shortcuts_summary_on"
            android:title="@string/title_use_keyboard_shortcuts"/>
    </PreferenceCategory>

</PreferenceScreen>