<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/text_preferences">
        <ListPreference
            android:defaultValue="@string/pref_fontsize_default"
            android:dialogTitle="@string/dialog_title_fontsize_preference"
            android:entries="@array/entries_fontsize_preference"
            android:entryValues="@array/entryvalues_fontsize_preference"
            android:key="fontsize"
            android:summary="@string/summary_fontsize_preference"
            android:title="@string/title_fontsize_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_color_default"
            android:dialogTitle="@string/dialog_title_color_preference"
            android:entries="@array/entries_color_preference"
            android:entryValues="@array/entryvalues_color_preference"
            android:key="color"
            android:summary="@string/summary_color_preference"
            android:title="@string/title_color_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_cursorblink_default"
            android:dialogTitle="@string/dialog_title_cursorblink_preference"
            android:entries="@array/entries_cursorblink_preference"
            android:entryValues="@array/entryvalues_cursorblink_preference"
            android:key="cursorBlink"
            android:summary="@string/summary_cursorblink_preference"
            android:title="@string/title_cursorblink_preference"/>

        <ListPreference
            android:defaultValue="@string/pref_cursorblink_period_default"
            android:dialogTitle="@string/dialog_title_cursorblink_period_preference"
            android:entries="@array/entries_cursorblink_period_preference"
            android:entryValues="@array/entryvalues_cursorblink_period_preference"
            android:key="cursorBlinkPeriod"
            android:dependency="cursorBlink"
            android:summary="@string/summary_cursorblink_period_preference"
            android:title="@string/title_cursorblink_period_preference"/>

        <CheckBoxPreference
            android:defaultValue="@bool/pref_utf8_by_default_default"
            android:key="utf8_by_default"
            android:summary="@string/summary_utf8_by_default_preference"
            android:title="@string/title_utf8_by_default_preference"/>
    </PreferenceCategory>

</PreferenceScreen>