<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/screen_preferences">
        <ListPreference
            android:defaultValue="@string/pref_statusbar_default"
            android:dialogTitle="@string/dialog_title_statusbar_preference"
            android:entries="@array/entries_statusbar_preference"
            android:entryValues="@array/entryvalues_statusbar_preference"
            android:key="statusbar"
            android:summary="@string/summary_statusbar_preference"
            android:title="@string/title_statusbar_preference"/>
        <ListPreference
            android:defaultValue="@integer/pref_actionbar_default"
            android:dialogTitle="@string/dialog_title_actionbar_preference"
            android:entries="@array/entries_actionbar_preference"
            android:entryValues="@array/entryvalues_actionbar_preference"
            android:key="actionbar"
            android:summary="@string/summary_actionbar_preference"
            android:title="@string/title_actionbar_preference"/>
        <ListPreference
            android:defaultValue="@integer/pref_orientation_default"
            android:dialogTitle="@string/dialog_title_orientation_preference"
            android:entries="@array/entries_orientation_preference"
            android:entryValues="@array/entryvalues_orientation_preference"
            android:key="orientation"
            android:summary="@string/summary_orientation_preference"
            android:title="@string/title_orientation_preference"/>
    </PreferenceCategory>

</PreferenceScreen>